force-app/main/default/objects/TestACObj1__c/TestACObj1__c.object-meta.xml
<CustomObject>
    <label>TestACObj1</label>
    <nameField>
        <label>TestACObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestACObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>