force-app/main/default/objects/TestACObj1__c/fields/TestFeidl3__c.field-meta.xml
<CustomField>
    <fullName>TestFeidl3__c</fullName>
    <label>TestFeidl3</label>
    <type>Email</type>
</CustomField>