force-app/main/default/objects/TestACObj1__c/fields/Testfied2__c.field-meta.xml
<CustomField>
    <fullName>Testfied2__c</fullName>
    <description>Add Comment  for Testfied2</description>
    <label>Testfied2</label>
    <type>Phone</type>
</CustomField>