force-app/main/default/objects/TestACObj1__c/fields/TestField1__c.field-meta.xml
<CustomField>
    <fullName>TestField1__c</fullName>
    <description>Add comment for TestField1</description>
    <label>TestField1</label>
    <type>Phone</type>
</CustomField>